# MerkleTree

./: Cargo.toml
src/: hashAlgo.rs  main.rs  merkleTree.rs  proof.rs  treeNode.rs
