[package]
name = "MerkleTree"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-bn254 = "0.4.0"
ark-ff = "0.4.2"
dusk-bls12_381 = "0.12.3"
#dusk-poseidon = "0.31.0"
light-poseidon = "0.2.0"


num = "0.4.1"
